References: MDEV-3924 lp:1088267 - merged fix from lp:codership-mysql